    - identifiers are not needed, osrm uses row.names or indexes
    - better input type checking
* osrmIsochrone() & osrmIsometric():
    - loc, src, dst accept data.frame, matrix, sfc and sf objects
    - identifiers are not needed, osrm uses row.names or indexes
    - better input type checking
    - the sf output has now three fields (id, isomin and isomax)


# osrm version 3.5.1 (Release date 2022-01)

## Minor changes
* Fix is() usage 



# osrm version 3.5.0 (Release date 2021-09)

## Major change
* remove sp argument from osrmRoute()
* returnClass default is now "sf" where it was previously "sp"
* The next major version of osrm will drop support for sp objects

## Minor changes
* Better handling of request with curl_fetch_memory()
* Better (lower) default value for demo server
* Update demo in README with complete maptiles + mapsf + osrm example
* Update sf dataset (update crs)
* Replace old RData sample dataset by new dataset in raw files
* 

# osrm version 3.4.1 (Release date 2020-03)

## Minor changes
* switch from gepaf to googlePolylines, great speed improvement (thank to John Sheffield @sheffe)
* use .onLoad instead of .onAttach to set the demo server by default
* replace examples that use cartography by mapsf examples. 
* curl instead of RCurl


# osrm version 3.4.0 (Release date: 2020-12)

## Minor changes
* change demo server from http://router.project-osrm.org/ to https://routing.openstreetmap.de/
* add osrm.server and osrm.profile in function to change the server directly in functions. 
* 

# osrm version 3.3.3 (Release date: 2020-04-14)

## Minor changes
* Changes to accomodate sf >= 0.9 and st_make_valid no longer in lwgeom
* iso isometric zones in osrmIsochrone()
* increase dmax in osrmIsochrone()





# osrm version 3.3.2 (Release date: 2019-09-24)

## Minor changes
* allow via points in osrmRoute with the "loc"" argument. (see #41)