@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export(osrmIsochrone)
+export(osrmIsodistance)
 export(osrmIsometric)
 export(osrmRoute)
 export(osrmTable)
