@@ -1,12 +1,12 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/osrmIsochrone.R
-\name{osrmIsochrone}
-\alias{osrmIsochrone}
-\title{Get Polygons of Isochrones}
+% Please edit documentation in R/osrmIsodistance.R
+\name{osrmIsodistance}
+\alias{osrmIsodistance}
+\title{Get Polygons of Isodistances}
 \usage{
-osrmIsochrone(
+osrmIsodistance(
   loc,
-  breaks = seq(from = 0, to = 60, length.out = 7),
+  breaks = seq(from = 0, to = 10000, length.out = 4),
   exclude,
   res = 30,
   returnclass,
@@ -25,14 +25,14 @@ osrmIsochrone(
 If \code{loc} is a data.frame, a matrix, an sfc object or an sf object then 
 only the first row or element is considered.}
 
-\item{breaks}{a numeric vector of break values to define isochrone areas, 
-in minutes.}
+\item{breaks}{a numeric vector of break values to define isodistance areas, 
+in meters.}
 
 \item{exclude}{pass an optional "exclude" request option to the OSRM API.}
 
-\item{res}{number of points used to compute isochrones, one side of the square
-grid, the total number of points will be res*res. Increase res to obtain more
-detailed isochrones.}
+\item{res}{number of points used to compute isodistances, one side of the 
+square grid, the total number of points will be res*res. Increase res to 
+obtain more detailed isodistances.}
 
 \item{returnclass}{deprecated.}
 
@@ -44,11 +44,11 @@ getOption("osrm.server") by default.}
 getOption("osrm.profile") by default.}
 }
 \value{
-The output of this function is an sf MULTIPOLYGON of isochrones.\cr
+The output of this function is an sf MULTIPOLYGON of isodistances.\cr
 It contains 3 fields: \itemize{
   \item id, an identifier
-  \item isomin, the minimum value of the isochrone polygon in minutes
-  \item isomax, the maximum value of the isochrone polygon in minutes
+  \item isomin, the minimum value of the isodistance polygon in meters
+  \item isomax, the maximum value of the isodistance polygon in meters
 }
 If loc is a vector, a data.frame or a matrix the coordinate 
 reference system (CRS) of the output is EPSG:4326 (WGS84).\cr 
@@ -57,8 +57,8 @@ as loc.\cr
 }
 \description{
 This function computes areas that are reachable within a 
-given time span from a point and returns the reachable regions as 
-polygons. These areas of equal travel time are called isochrones.
+given road distance from a point and returns the reachable regions as 
+polygons. These areas of equal travel distance are called isodistances.
 }
 \examples{
 \dontrun{
@@ -66,12 +66,12 @@ library(sf)
 apotheke.sf <- st_read(system.file("gpkg/apotheke.gpkg", package = "osrm"),
                        quiet = TRUE)
 # Get isochones with lon/lat coordinates
-iso <- osrmIsochrone(loc = c(13.43,52.47), breaks = seq(0,12,2))
+iso <- osrmIsodistance(loc = c(13.43,52.47), breaks = seq(0,500,100))
 # Map
 plot(iso["isomax"], breaks = sort(unique(c(iso$isomin, iso$isomax))))
 
 # Get isochones with an sf POINT
-iso2 <- osrmIsochrone(loc = apotheke.sf[11,], breaks = seq(0,12,2))
+iso2 <- osrmIsodistance(loc = apotheke.sf[11,], breaks = seq(0,500,100))
 # Map
 if(require("mapsf")){
   mapsf::mf_map(x = iso2, var = "isomin", type = "choro",
